[gd_scene load_steps=3 format=3 uid="uid://dxyn44276gtc6"]

[ext_resource type="Script" path="res://scripts/InteractionController.gd" id="1_jdy3e"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8ja2m"]
radius = 0.851067

[node name="WeaponInteractionController" type="Area3D"]
script = ExtResource("1_jdy3e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8ja2m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
